--- a/RK/RK.ipynb
+++ b/RK/RK.ipynb
@@ -25,7 +25,7 @@
    "execution_count": 68,
    "outputs": [],
    "source": [
-    "data = pd.read_csv('data/Admission_Predict.csv', sep=\",\")"
+    "data = pd.read_csv('../data/Admission_Predict.csv', sep=\",\")"
    ],
    "metadata": {
     "collapsed": false,
