add 2 and 3 labs

--- a/LAB1/lab1.ipynb
+++ b/LAB1/lab1.ipynb
@@ -24,7 +24,7 @@
    "execution_count": 172,
    "outputs": [],
    "source": [
-    "data = pd.read_csv('../data/flats_moscow.csv', sep=\",\", engine='python')"
+    "data = pd.read_csv('../data/flats_moscow.csv', sep=\",\")"
    ],
    "metadata": {
     "collapsed": false,
